@@ -24,15 +24,17 @@ import org.eclipse.jetty.client.HttpClientTransport;
 import org.eclipse.jetty.client.InputStreamResponseListener;
 import org.eclipse.jetty.client.Response;
 import org.eclipse.jetty.client.Socks4Proxy;
-import org.eclipse.jetty.client.transport.HttpClientTransportOverHTTP;
+import org.eclipse.jetty.client.transport.HttpClientConnectionFactory;
+import org.eclipse.jetty.client.transport.HttpClientTransportDynamic;
 import org.eclipse.jetty.client.transport.HttpDestination;
 import org.eclipse.jetty.client.transport.HttpExchange;
 import org.eclipse.jetty.client.transport.HttpRequest;
 import org.eclipse.jetty.client.transport.internal.HttpConnectionOverHTTP;
 import org.eclipse.jetty.http.HttpCookieStore;
 import org.eclipse.jetty.http2.client.HTTP2Client;
-import org.eclipse.jetty.http2.client.transport.HttpClientTransportOverHTTP2;
+import org.eclipse.jetty.http2.client.transport.ClientConnectionFactoryOverHTTP2;
 import org.eclipse.jetty.io.ArrayByteBufferPool;
+import org.eclipse.jetty.io.ClientConnectionFactory;
 import org.eclipse.jetty.io.ClientConnector;
 import org.eclipse.jetty.util.component.LifeCycle;
 import org.eclipse.jetty.util.ssl.SslContextFactory;
@@ -179,21 +181,26 @@ public class JettyHttpClient
             sslContextFactory.setTrustAll(true);
         }
 
-        HttpClientTransport transport;
+        ClientConnector clientConnector = new ClientConnector();
+        clientConnector.setSelectors(config.getSelectorCount());
+        clientConnector.setSslContextFactory(sslContextFactory);
+
+        ImmutableList.Builder<ClientConnectionFactory.Info> protocols = ImmutableList.builder();
         if (config.isHttp2Enabled()) {
-            HTTP2Client client = new HTTP2Client();
+            HTTP2Client client = new HTTP2Client(clientConnector);
             client.setInitialSessionRecvWindow(toIntExact(config.getHttp2InitialSessionReceiveWindowSize().toBytes()));
             client.setInitialStreamRecvWindow(toIntExact(config.getHttp2InitialStreamReceiveWindowSize().toBytes()));
             client.setInputBufferSize(toIntExact(config.getHttp2InputBufferSize().toBytes()));
-            client.setSelectors(config.getSelectorCount());
-            transport = new HttpClientTransportOverHTTP2(client);
+            client.setStreamIdleTimeout(idleTimeoutMillis);
+            protocols.add(new ClientConnectionFactoryOverHTTP2.HTTP2(client));
         }
-        else {
-            ClientConnector clientConnector = new ClientConnector();
-            clientConnector.setSelectors(config.getSelectorCount());
-            clientConnector.setSslContextFactory(sslContextFactory);
-            transport = new HttpClientTransportOverHTTP(clientConnector);
-        }
+
+        protocols.add(HttpClientConnectionFactory.HTTP11);
+
+        // The order of the protocols indicates the client's preference.
+        // The first is the most preferred, the last is the least preferred, but
+        // the protocol version to use can be explicitly specified in the request.
+        HttpClientTransport transport = new HttpClientTransportDynamic(clientConnector, protocols.build().toArray(new ClientConnectionFactory.Info[0]));
 
         httpClient = new AuthorizationPreservingHttpClient(transport);
 
