@@ -19,6 +19,9 @@ Platform 3.28
 
   We now handle the Retry-After: header of 429 HTTP status codes.
 
+  HTTP/2 now works over TLS, negotiating with the server using ALPN.
+  HTTP/2 may be enabled using the "http-client.http2.enabled" configuration property.
+
 * Maven plugin upgrades
 
   - maven-deploy-plugin to 3.1.3 (was 2.8.2)
